knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Cell__c/pqcrush__White_Space_Cell__c.object-meta.xml
<CustomObject>
    <label>White Space Cell</label>
    <nameField>
        <label>White Space Cell Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>White Space Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>