knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Cell__c/fields/pqcrush__Info__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Info__c</fullName>
    <description>Generic Information about a cell</description>
    <label>Info</label>
    <type>TextArea</type>
</CustomField>