knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Cell__c/fields/pqcrush__White_Space__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__White_Space__c</fullName>
    <label>White Space</label>
    <referenceTo>pqcrush__White_Space__c</referenceTo>
    <relationshipLabel>White Space Cells</relationshipLabel>
    <relationshipName>White_Space_Cells</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>