knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Cell__c/fields/pqcrush__White_Space_Column__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__White_Space_Column__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Column</label>
    <referenceTo>pqcrush__White_Space_Column__c</referenceTo>
    <relationshipLabel>White Space Cells</relationshipLabel>
    <relationshipName>White_Space_Cells</relationshipName>
    <type>Lookup</type>
</CustomField>